<resources>

    <!--PLEASE PROVIDE API KEY FOR MOVIE DB TO LAUNCH THIS APP-->
    <string name="API_KEY"></string>

    <string name="app_name">PoplularMovieApp</string>
    <string name="sort_Popular_Movie_String">Order by popular movie</string>
    <string name="sort_Hightest_Rated_Movie_String">Order by highest-rated</string>
    <string name="error_message">An error has occurred. Please try again by clicking REFRESH</string>
    <!--Used in overflow menu to refresh movie data-->
    <string name="action_refresh">Refresh</string>
    <!--Following string will be used in MovieDetail page-->
    <string name="original_Title">Original Title:</string>
    <string name="poster_Image">Poster Image:</string>
    <string name="plot_Title">A plot synopsis:</string>
    <string name="user_Rating">User Rating:  </string>
    <string name="release_Date">Release Date:</string>
    <string name="trailers">Trailers:</string>
    <string name="reviews">Reviews:</string>
    <string name="no_movie_available_txt">No review available for this movie</string>
    <string name="show_my_favorite_movie_list">Show my favorite movie list</string>
    <string name="action_favorite_str">Favorite</string>
    <string name="add_to_fav_movie_list">Add To Fav Movie List</string>
    <string name="added_to_fav_movie_list">Added To Your Fav Movie List</string>
    <string name="content_authority">com.sohi.android.poplularmovieapp</string>
    <string name="movie_added_to_DB_message">Movie added to your favorite movie list</string>
    <string name="no_internet_loading_movie_from_local_dB">Internet is not available, loading movies from local DB</string>

</resources>
