<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/movie_detail_panel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:overScrollMode="always"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="outsideInset"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/original_Title_Text"
                style="@style/movie_name_text_style" />

            <ImageButton
                android:id="@+id/favorite_button"
                style="@style/fav_btn_style"
                android:src="@android:drawable/star_big_on" />
        </RelativeLayout>

        <View style="@style/movie_details_line_seperator_style" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/poster_Image"
                    style="@style/movie_poster_style" />
            </RelativeLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/addToFavBtn"
                style="@style/add_to_fav_btn_style"
                android:onClick="onFavClick"
                android:text="@string/add_to_fav_movie_list"
                app:backgroundTint="@color/accent_material_light" />
        </LinearLayout>


        <View style="@style/movie_details_line_seperator_style" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/label_style"
                android:text="@string/user_Rating" />

            <TextView
                android:id="@+id/user_Rating_Text"
                style="@style/movie_details_textstyle" />
        </LinearLayout>

        <View style="@style/movie_details_line_seperator_style" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/label_style"
                android:text="@string/release_Date" />

            <TextView
                android:id="@+id/release_date_Text"
                style="@style/movie_details_textstyle"
                android:layout_marginLeft="10dp"
                android:textColor="#FF0000" />
        </LinearLayout>

        <!--Trailer List-->
        <View style="@style/movie_details_line_seperator_style" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/label_style"
                android:layout_height="match_parent"
                android:text="@string/trailers" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/trailerview_reviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:foregroundGravity="center"
                    android:paddingLeft="20dp" />
            </RelativeLayout>

        </LinearLayout>

        <View style="@style/movie_details_line_seperator_style" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/label_style"
                android:text="@string/plot_Title" />
            />

            <TextView
                android:id="@+id/plot_synopsis_Text"
                style="@style/movie_details_textstyle"
                android:fontFamily="sans-serif-medium"

                />
        </LinearLayout>

        <View style="@style/movie_details_line_seperator_style" />
        <!--Review List-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/label_style"
                android:text="@string/reviews" />
            />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerview_reviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/minMargin" />
            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>
</ScrollView>